Feature: Delete Account

--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
         <p class="balance__value">0000€</p>
       </div>
 
-      <!-- MOVEMENTS -->
-      <div class="movements">
-        <div class="movements__row">
-          <div class="movements__type movements__type--deposit">2 deposit</div>
-          <div class="movements__date">3 days ago</div>
-          <div class="movements__value">4 000€</div>
+      <!-- transfers -->
+      <div class="transfers">
+        <div class="transfers__row">
+          <div class="transfers__type transfers__type--deposit">2 deposit</div>
+          <div class="transfers__date">3 days ago</div>
+          <div class="transfers__value">4 000€</div>
         </div>
-        <div class="movements__row">
-          <div class="movements__type movements__type--withdrawal">
+        <div class="transfers__row">
+          <div class="transfers__type transfers__type--withdrawal">
             1 withdrawal
           </div>
-          <div class="movements__date">24/01/2037</div>
-          <div class="movements__value">-378€</div>
+          <div class="transfers__date">24/01/2037</div>
+          <div class="transfers__value">-378€</div>
         </div>
       </div>
 
@@ -128,6 +128,5 @@
     </footer> -->
 
     <script src="script.js"></script>
-    <script src="learn.js"></script>
   </body>
 </html>
